--- a/5/imdex.html
+++ b/5/imdex.html
@@ -20,7 +20,7 @@
         <form action="#">
             <div class="bw_title">
                 <p>Bad words:</p>
-                <div class="vw_list"></div>
+                <div class="bw_list"></div>
             </div>
             <div class="input_bad_word">
                 <input type="text" class="form-control ds-input inp_bw " id="inp_bw" placeholder="Word here..." value="">
